сделал секции с преимуществами

--- a/src/views/pages/templates.j2
+++ b/src/views/pages/templates.j2
@@ -177,7 +177,7 @@
             <h2 class="section__main-title">Какие системы мы поддерживаем</h2>
             <picture class="section__big-image-wrapper">
               <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
-              <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+              <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
               {% set imageCount = imageCount + 1%}
             </picture>
             <div class="section__text-content">
@@ -209,35 +209,35 @@
                   <div class="section__swiper-slide swiper-slide">
                     <picture class="section__swiper-slide-wrapper">
                       <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
-                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
                       {% set imageCount = imageCount + 1%}
                     </picture>
                   </div>
                   <div class="section__swiper-slide swiper-slide">
                     <picture class="section__swiper-slide-wrapper">
                       <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
-                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
                       {% set imageCount = imageCount + 1%}
                     </picture>
                   </div>
                   <div class="section__swiper-slide swiper-slide">
                     <picture class="section__swiper-slide-wrapper">
                       <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
-                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
                       {% set imageCount = imageCount + 1%}
                     </picture>
                   </div>
                   <div class="section__swiper-slide swiper-slide">
                     <picture class="section__swiper-slide-wrapper">
                       <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
-                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
                       {% set imageCount = imageCount + 1%}
                     </picture>
                   </div>
                   <div class="section__swiper-slide swiper-slide">
                     <picture class="section__swiper-slide-wrapper">
                       <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
-                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
                       {% set imageCount = imageCount + 1%}
                     </picture>
                   </div>
@@ -249,35 +249,35 @@
                   <div class="section__swiper-thumb swiper-slide">
                     <picture class="section__swiper-thumb-wrapper">
                       <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
-                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
                       {% set imageCount = imageCount + 1%}
                     </picture>
                   </div>
                   <div class="section__swiper-thumb swiper-slide">
                     <picture class="section__swiper-thumb-wrapper">
                       <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
-                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
                       {% set imageCount = imageCount + 1%}
                     </picture>
                   </div>
                   <div class="section__swiper-thumb swiper-slide">
                     <picture class="section__swiper-thumb-wrapper">
                       <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
-                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
                       {% set imageCount = imageCount + 1%}
                     </picture>
                   </div>
                   <div class="section__swiper-thumb swiper-slide">
                     <picture class="section__swiper-thumb-wrapper">
                       <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
-                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
                       {% set imageCount = imageCount + 1%}
                     </picture>
                   </div>
                   <div class="section__swiper-thumb swiper-slide">
                     <picture class="section__swiper-thumb-wrapper">
                       <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
-                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
                       {% set imageCount = imageCount + 1%}
                     </picture>
                   </div>
@@ -325,6 +325,95 @@
           </div>
           <div class="section__video-wrapper">
             <iframe class="section__video" src="https://www.youtube.com/embed/fJ9rUzIMcZQ" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section--with-paddings">
+      <div class="container">
+        <div class="section__content">
+          <h3 class="section__title">Преимущества</h3>
+          <div class="section__text-content">
+            <p class="section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores nulla consectetur vitae molestiae? Suscipit quas quos praesentium iure voluptatem placeat quasi nihil voluptatibus consequatur. Eum est et accusamus, tenetur numquam, commodi blanditiis omnis libero veniam ratione minus maxime quidem accusantium deserunt consectetur dignissimos.</p>
+          </div>
+          <ul class="section__adv-list">
+            <li class="section__adv-list-item">
+              <img class="seaction__adv-icon" src="@img/feature-gear.svg" alt="" width="60" height="58">
+              <p class="section__adv-text">
+                <span>Личный кабинет</span> позволяет реализовать все операции с аутентификаторами от самостоятельного выпуска до блокировки
+              </p>
+            </li>
+            <li class="section__adv-list-item">
+              <img class="seaction__adv-icon" src="@img/feature-gear.svg" alt="" width="60" height="58">
+              <p class="section__adv-text">
+                <span>Личный кабинет</span> позволяет реализовать все операции с аутентификаторами от самостоятельного выпуска до блокировки
+              </p>
+            </li>
+            <li class="section__adv-list-item">
+              <img class="seaction__adv-icon" src="@img/feature-gear.svg" alt="" width="60" height="58">
+              <p class="section__adv-text">
+                <span>Личный кабинет</span> позволяет реализовать все операции с аутентификаторами от самостоятельного выпуска до блокировки
+              </p>
+            </li>
+            <li class="section__adv-list-item">
+              <img class="seaction__adv-icon" src="@img/feature-gear.svg" alt="" width="60" height="58">
+              <p class="section__adv-text">
+                <span>Личный кабинет</span> позволяет реализовать все операции с аутентификаторами от самостоятельного выпуска до блокировки
+              </p>
+            </li>
+            <li class="section__adv-list-item">
+              <img class="seaction__adv-icon" src="@img/feature-gear.svg" alt="" width="60" height="58">
+              <p class="section__adv-text">
+                <span>Личный кабинет</span> позволяет реализовать все операции с аутентификаторами от самостоятельного выпуска до блокировки
+              </p>
+            </li>
+            <li class="section__adv-list-item">
+              <img class="seaction__adv-icon" src="@img/feature-gear.svg" alt="" width="60" height="58">
+              <p class="section__adv-text">
+                <span>Личный кабинет</span> позволяет реализовать все операции с аутентификаторами от самостоятельного выпуска до блокировки
+              </p>
+            </li>
+          </ul>
+          <button class="section__button button button--blue" type="button">Запросить прайс-лист</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section--lb-bg section--with-paddings">
+      <div class="container">
+        <div class="section__content section__content--with-big-img section__content--image-right">
+          <div class="section__half">
+            <h2 class="section__main-title">Преимущества</h2>
+            <picture class="section__big-image-wrapper">
+              <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
+              <img class="section__image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+              {% set imageCount = imageCount + 1%}
+            </picture>
+            <div class="section__text-content">
+              <p class="section__sub-title">Описательный текст блока на любое неограниченное количество символов</p>
+            </div>
+            <ul class="section__adv-list section__adv-list--single-col">
+              <li class="section__adv-list-item">
+                <img class="seaction__adv-icon" src="@img/feature-gear.svg" alt="" width="60" height="58">
+                <p class="section__adv-text">
+                  <span>Личный кабинет</span> позволяет реализовать все операции с аутентификаторами от самостоятельного выпуска до блокировки
+                </p>
+              </li>
+              <li class="section__adv-list-item">
+                <img class="seaction__adv-icon" src="@img/feature-gear.svg" alt="" width="60" height="58">
+                <p class="section__adv-text">
+                  <span>Личный кабинет</span> позволяет реализовать все операции с аутентификаторами от самостоятельного выпуска до блокировки
+                </p>
+              </li>
+              <li class="section__adv-list-item">
+                <img class="seaction__adv-icon" src="@img/feature-gear.svg" alt="" width="60" height="58">
+                <p class="section__adv-text">
+                  <span>Личный кабинет</span> позволяет реализовать все операции с аутентификаторами от самостоятельного выпуска до блокировки
+                </p>
+              </li>
+            </ul>
+            <button class="section__button button button--blue" type="button">Запросить прайс-лист</button>
           </div>
         </div>
       </div>
