--- a/src/scss/blocks/section.scss
+++ b/src/scss/blocks/section.scss
@@ -171,11 +171,11 @@
 
 .section__content--with-big-img {
   @media (min-width: $desktop-width) {
-    min-height: 514px;
+    min-height: 459px;
   }
 }
 
-.section__content--with-slider{
+.section__content--with-slider {
   @media (min-width: $desktop-width) {
     min-height: 557px;
   }
@@ -195,19 +195,36 @@
 .section__big-image-wrapper {
   width: 100%;
   height: 230px;
+  overflow: hidden;
 
   @media (min-width: $desktop-width) {
-    height: 514px;
+    height: 100%;
+    max-height: 100%;
     position: absolute;
     left: 0;
     top: 0;
     max-width: inherit;
   }
 }
-.section__big-image {
+.section__image {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.section__content--image-right {
+  & .section__half {
+    @media (min-width: $desktop-width) {
+      align-self: flex-start;
+    }
+  }
+
+  & .section__big-image-wrapper {
+    @media (min-width: $desktop-width) {
+      left: auto;
+      right: 0;
+    }
+  }
 }
 .section__half {
 
@@ -382,5 +399,54 @@
 
   width: 100%;
   height: 100%;
+}
+
+.section__adv-list {
+  margin: 0;
+  margin-bottom: 30px;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 45px;
+    column-gap: 35px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 45px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.section__adv-list--single-col {
+  margin-bottom: 0;
+  @media (min-width: $tablet-width) {
+    display: flex;
+    gap: 30px;
+  }
+}
+.section__adv-list-item {
+  display: flex;
+  gap: 15px;
+
+}
+.seaction__adv-icon {
+  flex-shrink: 0;
+  max-width: 65px;
+  max-height: 65px;
+  align-self: flex-start;
+}
+.section__adv-text {
+  margin: 0;
+  padding: 0;
+  font-weight: 300;
+
+  & span {
+    font-weight: 700;
+  }
 }
 
