--- a/src/scss/blocks/section.scss
+++ b/src/scss/blocks/section.scss
@@ -449,4 +449,15 @@
     font-weight: 700;
   }
 }
-
+.section__card-swiper-wrapper {
+}
+.section__card-swiper {
+}
+.section__card-swiper-slide {
+  @media (max-width: $max-mobile-width) {
+    min-width: 251px;
+  }
+}
+.section__card-swiper-wrapper {
+  position: relative;
+}
