--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -75,3 +75,4 @@
 @import "./blocks/sfr.scss";
 @import "./blocks/shd.scss";
 @import "./blocks/conf-serv.scss";
+@import "./blocks/person-card.scss";
