--- a/src/views/pages/templates.j2
+++ b/src/views/pages/templates.j2
@@ -423,89 +423,101 @@
     <section class="section section--with-paddings section--lb-bg ">
       <div class="container">
         <div class="section__content">
-          <h3 class="section__title">Команда ExaSystems</h3>
+          <div class="section__header">
+            <h3 class="section__title">Команда ExaSystems</h3>
+            <div class="section__card-swiper-buttons">
+              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+                <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
+                  <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
+                </svg>
+                <span class="visually-hidden">Перелестнуть назад</span>
+              </button>
+              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+                <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
+                  <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
+                </svg>
+                <span class="visually-hidden">Перелестнуть назад</span>
+              </button>
+            </div>
+          </div>
+
           <div class="section__card-swiper-wrapper">
             <div class="section__card-swiper swiper">
               <div class="swiper-wrapper">
                 <div class="section__card-swiper-slide swiper-slide">
-                  <div class="section__card">
-                    <div class="section__card-content">
-                      <picture class="section__card-image-wrapper">
-                        <source type="image/webp" srcset="https://picsum.photos/400/300?random={{imageCount}} 1x, https://picsum.photos/400/300?random={{imageCount}} 2x">
-                        <img class="section__card-image" src="https://picsum.photos/400/300?random={{imageCount}}" srcset="https://picsum.photos/400/300g?random={{imageCount}} 2x" alt="Описание картинки.">
-                        {% set imageCount = imageCount + 1%}
-                      </picture>
-                      <p class="section__card-title">Двухфакторная аутентификация пользователей</p>
-                      <p class="section__card-paragraph">Для входа в операционную систему Microsoft Windows и корпоративную сеть пользователю необходимо иметь USB-токен или смарт-карту JaCarta.</p>
+                  <div class="person-card">
+                    <div class="person-card__info">
+                      <p class="person-card__name">Семенов Константин Владимирович</p>
+                      <p class="person-card__job-title">Генеральный директор, сооснователь</p>
                     </div>
+                    <picture class="person-card__photo-wrapper">
+                      <source type="image/webp" srcset="@img/person-card-photo.webp 1x">
+                      <img class="person-card__image" src="@img/person-card-photo.jpg" alt="">
+                    </picture>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
-                  <div class="section__card">
-                    <div class="section__card-content">
-                      <picture class="section__card-image-wrapper">
-                        <source type="image/webp" srcset="https://picsum.photos/400/300?random={{imageCount}} 1x, https://picsum.photos/400/300?random={{imageCount}} 2x">
-                        <img class="section__card-image" src="https://picsum.photos/400/300?random={{imageCount}}" srcset="https://picsum.photos/400/300g?random={{imageCount}} 2x" alt="Описание картинки.">
-                        {% set imageCount = imageCount + 1%}
-                      </picture>
-                      <p class="section__card-title">Двухфакторная аутентификация пользователей</p>
-                      <p class="section__card-paragraph">Для входа в операционную систему Microsoft Windows и корпоративную сеть пользователю необходимо иметь USB-токен или смарт-карту JaCarta.</p>
+                  <div class="person-card">
+                    <div class="person-card__info">
+                      <p class="person-card__name">Семенов Константин Владимирович</p>
+                      <p class="person-card__job-title">Генеральный директор, сооснователь</p>
                     </div>
+                    <picture class="person-card__photo-wrapper">
+                      <source type="image/webp" srcset="@img/person-card-photo.webp 1x">
+                      <img class="person-card__image" src="@img/person-card-photo.jpg" alt="">
+                    </picture>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
-                  <div class="section__card">
-                    <div class="section__card-content">
-                      <picture class="section__card-image-wrapper">
-                        <source type="image/webp" srcset="https://picsum.photos/400/300?random={{imageCount}} 1x, https://picsum.photos/400/300?random={{imageCount}} 2x">
-                        <img class="section__card-image" src="https://picsum.photos/400/300?random={{imageCount}}" srcset="https://picsum.photos/400/300g?random={{imageCount}} 2x" alt="Описание картинки.">
-                        {% set imageCount = imageCount + 1%}
-                      </picture>
-                      <p class="section__card-title">Двухфакторная аутентификация пользователей</p>
-                      <p class="section__card-paragraph">Для входа в операционную систему Microsoft Windows и корпоративную сеть пользователю необходимо иметь USB-токен или смарт-карту JaCarta.</p>
+                  <div class="person-card">
+                    <div class="person-card__info">
+                      <p class="person-card__name">Семенов Константин Владимирович</p>
+                      <p class="person-card__job-title">Генеральный директор, сооснователь</p>
                     </div>
+                    <picture class="person-card__photo-wrapper">
+                      <source type="image/webp" srcset="@img/person-card-photo.webp 1x">
+                      <img class="person-card__image" src="@img/person-card-photo.jpg" alt="">
+                    </picture>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
-                  <div class="section__card">
-                    <div class="section__card-content">
-                      <picture class="section__card-image-wrapper">
-                        <source type="image/webp" srcset="https://picsum.photos/400/300?random={{imageCount}} 1x, https://picsum.photos/400/300?random={{imageCount}} 2x">
-                        <img class="section__card-image" src="https://picsum.photos/400/300?random={{imageCount}}" srcset="https://picsum.photos/400/300g?random={{imageCount}} 2x" alt="Описание картинки.">
-                        {% set imageCount = imageCount + 1%}
-                      </picture>
-                      <p class="section__card-title">Двухфакторная аутентификация пользователей</p>
-                      <p class="section__card-paragraph">Для входа в операционную систему Microsoft Windows и корпоративную сеть пользователю необходимо иметь USB-токен или смарт-карту JaCarta.</p>
+                  <div class="person-card">
+                    <div class="person-card__info">
+                      <p class="person-card__name">Семенов Константин Владимирович</p>
+                      <p class="person-card__job-title">Генеральный директор, сооснователь</p>
                     </div>
+                    <picture class="person-card__photo-wrapper">
+                      <source type="image/webp" srcset="@img/person-card-photo.webp 1x">
+                      <img class="person-card__image" src="@img/person-card-photo.jpg" alt="">
+                    </picture>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
-                  <div class="section__card">
-                    <div class="section__card-content">
-                      <picture class="section__card-image-wrapper">
-                        <source type="image/webp" srcset="https://picsum.photos/400/300?random={{imageCount}} 1x, https://picsum.photos/400/300?random={{imageCount}} 2x">
-                        <img class="section__card-image" src="https://picsum.photos/400/300?random={{imageCount}}" srcset="https://picsum.photos/400/300g?random={{imageCount}} 2x" alt="Описание картинки.">
-                        {% set imageCount = imageCount + 1%}
-                      </picture>
-                      <p class="section__card-title">Двухфакторная аутентификация пользователей</p>
-                      <p class="section__card-paragraph">Для входа в операционную систему Microsoft Windows и корпоративную сеть пользователю необходимо иметь USB-токен или смарт-карту JaCarta.</p>
+                  <div class="person-card">
+                    <div class="person-card__info">
+                      <p class="person-card__name">Семенов Константин Владимирович</p>
+                      <p class="person-card__job-title">Генеральный директор, сооснователь</p>
                     </div>
+                    <picture class="person-card__photo-wrapper">
+                      <source type="image/webp" srcset="@img/person-card-photo.webp 1x">
+                      <img class="person-card__image" src="@img/person-card-photo.jpg" alt="">
+                    </picture>
+                  </div>
+                </div>
+                <div class="section__card-swiper-slide swiper-slide">
+                  <div class="person-card">
+                    <div class="person-card__info">
+                      <p class="person-card__name">Семенов Константин Владимирович</p>
+                      <p class="person-card__job-title">Генеральный директор, сооснователь</p>
+                    </div>
+                    <picture class="person-card__photo-wrapper">
+                      <source type="image/webp" srcset="@img/person-card-photo.webp 1x">
+                      <img class="person-card__image" src="@img/person-card-photo.jpg" alt="">
+                    </picture>
                   </div>
                 </div>
               </div>
             </div>
-            <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
-              <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
-                <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
-              </svg>
-              <span class="visually-hidden">Перелестнуть назад</span>
-            </button>
-            <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
-              <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
-                <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
-              </svg>
-              <span class="visually-hidden">Перелестнуть назад</span>
-            </button>
           </div>
         </div>
       </div>
