сделал слайдер сертификатов

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -76,3 +76,4 @@
 @import "./blocks/shd.scss";
 @import "./blocks/conf-serv.scss";
 @import "./blocks/person-card.scss";
+@import "./blocks/cert-card.scss";
