--- a/src/views/pages/templates.j2
+++ b/src/views/pages/templates.j2
@@ -524,15 +524,132 @@
     </section>
     {% set sectionCardSwiperCnt = sectionCardSwiperCnt + 1 %}
 
+    <section class="section section--with-paddings section--lb-bg ">
+      <div class="container">
+        <div class="section__content">
+          <div class="section__header">
+            <h3 class="section__title">Сертификаты</h3>
+            <div class="section__card-swiper-buttons">
+              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+                <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
+                  <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
+                </svg>
+                <span class="visually-hidden">Перелестнуть назад</span>
+              </button>
+              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+                <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
+                  <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
+                </svg>
+                <span class="visually-hidden">Перелестнуть назад</span>
+              </button>
+            </div>
+          </div>
+
+          <div class="section__card-swiper-wrapper">
+            <div class="section__card-swiper swiper">
+              <div class="swiper-wrapper">
+                <div class="section__card-swiper-slide swiper-slide">
+                  <div class="cert-card">
+                    <a class="cert-card__link" href="@img/certificate-1-big.jpg">
+                      <picture class="cert-card__photo-wrapper">
+                        <source type="image/webp" srcset="@img/certificate-1-preview.webp 1x">
+                        <img class="cert-card__image" src="@img/certificate-1-preview.jpg" alt="Миниатюра сертификата компании АО Инженерный центр Икар">
+                      </picture>
+                    </a>
+                    <div class="cert-card__info">
+                      <p class="cert-card__company">АО "Инженерный центр Икар"</p>
+                      <p class="cert-card__description">Техническая поддержка пользователей Femap with NX Nastran</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="section__card-swiper-slide swiper-slide">
+                  <div class="cert-card">
+                    <a class="cert-card__link" href="@img/certificate-1-big.jpg">
+                      <picture class="cert-card__photo-wrapper">
+                        <source type="image/webp" srcset="@img/certificate-1-preview.webp 1x">
+                        <img class="cert-card__image" src="@img/certificate-1-preview.jpg" alt="Миниатюра сертификата компании АО Инженерный центр Икар">
+                      </picture>
+                    </a>
+                    <div class="cert-card__info">
+                      <p class="cert-card__company">АО "Инженерный центр Икар"</p>
+                      <p class="cert-card__description">Техническая поддержка пользователей Femap with NX Nastran</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="section__card-swiper-slide swiper-slide">
+                  <div class="cert-card">
+                    <a class="cert-card__link" href="@img/certificate-1-big.jpg">
+                      <picture class="cert-card__photo-wrapper">
+                        <source type="image/webp" srcset="@img/certificate-1-preview.webp 1x">
+                        <img class="cert-card__image" src="@img/certificate-1-preview.jpg" alt="Миниатюра сертификата компании АО Инженерный центр Икар">
+                      </picture>
+                    </a>
+                    <div class="cert-card__info">
+                      <p class="cert-card__company">АО "Инженерный центр Икар"</p>
+                      <p class="cert-card__description">Техническая поддержка пользователей Femap with NX Nastran</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="section__card-swiper-slide swiper-slide">
+                  <div class="cert-card">
+                    <a class="cert-card__link" href="@img/certificate-1-big.jpg">
+                      <picture class="cert-card__photo-wrapper">
+                        <source type="image/webp" srcset="@img/certificate-1-preview.webp 1x">
+                        <img class="cert-card__image" src="@img/certificate-1-preview.jpg" alt="Миниатюра сертификата компании АО Инженерный центр Икар">
+                      </picture>
+                    </a>
+                    <div class="cert-card__info">
+                      <p class="cert-card__company">АО "Инженерный центр Икар"</p>
+                      <p class="cert-card__description">Техническая поддержка пользователей Femap with NX Nastran</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="section__card-swiper-slide swiper-slide">
+                  <div class="cert-card">
+                    <a class="cert-card__link" href="@img/certificate-1-big.jpg">
+                      <picture class="cert-card__photo-wrapper">
+                        <source type="image/webp" srcset="@img/certificate-1-preview.webp 1x">
+                        <img class="cert-card__image" src="@img/certificate-1-preview.jpg" alt="Миниатюра сертификата компании АО Инженерный центр Икар">
+                      </picture>
+                    </a>
+                    <div class="cert-card__info">
+                      <p class="cert-card__company">АО "Инженерный центр Икар"</p>
+                      <p class="cert-card__description">Техническая поддержка пользователей Femap with NX Nastran</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="section__card-swiper-slide swiper-slide">
+                  <div class="cert-card">
+                    <a class="cert-card__link" href="@img/certificate-1-big.jpg">
+                      <picture class="cert-card__photo-wrapper">
+                        <source type="image/webp" srcset="@img/certificate-1-preview.webp 1x">
+                        <img class="cert-card__image" src="@img/certificate-1-preview.jpg" alt="Миниатюра сертификата компании АО Инженерный центр Икар">
+                      </picture>
+                    </a>
+                    <div class="cert-card__info">
+                      <p class="cert-card__company">АО "Инженерный центр Икар"</p>
+                      <p class="cert-card__description">Техническая поддержка пользователей Femap with NX Nastran</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    {% set sectionCardSwiperCnt = sectionCardSwiperCnt + 1 %}
+
   </main>
 {% endblock content %}
 
 {% block modal %}
-
+  {% include "./blocks/modal-image.j2" %}
 {% endblock %}
 
 {% block js %}
   <script src="./js/swiper-bundle.min.js"></script>
   <script src="./js/swipers.min.js"></script>
+  <script src="./js/modal-image.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
