--- a/src/scss/blocks/section.scss
+++ b/src/scss/blocks/section.scss
@@ -295,10 +295,7 @@
     gap: 20px;
   }
 }
-.section__swiper {
-}
-.section__swiper--main {
-}
+
 .section__swiper-slide {
   height: 232px;
 
@@ -313,7 +310,6 @@
 .section__swiper-slide-wrapper {
 }
 
-
 .section__swiper--thumbs {
   @media (max-width: $max-tablet-width) {
     display: none;
@@ -322,9 +318,6 @@
 
 .section__swiper-thumb {
   height: $section-thumbs-height * 1px;
-}
-
-.section__swiper-thumb-wrapper {
 }
 
 .section__swiper-button {
@@ -488,6 +481,10 @@
   gap: 12px;
   flex-shrink: 0;
 
+  @media (min-width: $desktop-swiper-width) {
+    display: none;
+  }
+
   & .section__swiper-button {
     position: static;
     z-index: auto;
@@ -502,5 +499,19 @@
 
   & .section__swiper-button--next {
     transform: none;
+  }
+}
+
+.section__card-swiper-buttons--desktop-only {
+  display: none;
+
+  @media (min-width: $desktop-swiper-width) {
+    position: absolute;
+    top: 50%;
+    left: -55px;
+    right: -55px;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
   }
 }
