--- a/src/views/pages/templates.j2
+++ b/src/views/pages/templates.j2
@@ -798,6 +798,8 @@
     </section>
     {% set sectionCardSwiperCnt = sectionCardSwiperCnt + 1 %}
 
+    {% include "./blocks/download-cp.j2" %}
+
   </main>
 {% endblock content %}
 
@@ -809,5 +811,6 @@
   <script src="./js/swiper-bundle.min.js"></script>
   <script src="./js/swipers.min.js"></script>
   <script src="./js/modal-image.min.js"></script>
+  <script src="./js/download-cp.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
