--- a/src/scss/blocks/cert-card.scss
+++ b/src/scss/blocks/cert-card.scss
@@ -1,12 +1,12 @@
 .cert-card {
   display: flex;
   flex-direction: column;
-  background-color: $white-color;
   min-width: 242px;
   max-height: 336px;
-  border: 1px solid transparent;
 
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.05);
+  background-color: $white-color;
+  border: 1px solid transparent;
+  box-shadow: 2px 2px 10px rgb(0 0 0 / 5%);
 
   transition: border-color 0.3s ease;
 
@@ -17,6 +17,7 @@
       opacity: 1;
     }
   }
+
   &:focus-within {
     border-color: $blue-color;
   }
@@ -24,13 +25,15 @@
   @media (min-width: $tablet-width) {
     max-height: 500px;
   }
-
 }
+
 .cert-card__link {
   position: relative;
+
   display: flex;
   width: 100%;
   overflow: hidden;
+
   text-decoration: none;
 
   &:focus-visible {
@@ -38,16 +41,19 @@
   }
 
   &::after {
-    position: absolute;
-    right: 0;
-    top: 0;
     content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+
     width: 55px;
     height: 55px;
+
     background-color: $blue-color;
     background-image: url("@img/icons/zoom-in-icon.svg");
     background-repeat: no-repeat;
     background-position: center;
+
     transition: opacity 0.3s ease;
 
     @media (min-width: $desktop-width) {
@@ -55,36 +61,44 @@
     }
   }
 }
+
 .cert-card__photo-wrapper {
   display: flex;
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
+
 .cert-card__image {
   display: block;
   width: 100%;
   height: 100%;
+
   object-fit: cover;
 }
+
 .cert-card__info {
-  flex-shrink: 0;
-  padding: 15px;
   display: flex;
+  flex-shrink: 0;
   flex-direction: column;
+  padding: 15px;
+
   gap: 15px;
 }
+
 .cert-card__company {
   margin: 0;
   padding: 0;
 
-  font-family: $jost-font;
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
+  font-family: $jost-font;
 }
+
 .cert-card__description {
   margin: 0;
   padding: 0;
+
   line-height: 20px;
   color: #bbbbbc;
 }
