запретил сдайлерам карточек драгаться на десктопе

--- a/src/scss/blocks/swiper.scss
+++ b/src/scss/blocks/swiper.scss
@@ -4,9 +4,9 @@
   margin-right: auto;
   margin-left: auto;
 
-  :active {
-    cursor: grabbing;
-  }
+  // :active {
+  //   cursor: grabbing;
+  // }
 }
 
 .swiper-slide {
