--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -77,3 +77,4 @@
 @import "./blocks/conf-serv.scss";
 @import "./blocks/person-card.scss";
 @import "./blocks/cert-card.scss";
+@import "./blocks/service-header.scss";
