наполнил шаблон услуги готовыми блоками

--- a/src/views/pages/templates.j2
+++ b/src/views/pages/templates.j2
@@ -420,6 +420,7 @@
     </section>
 
     {% set sectionCardSwiperCnt = 1 %}
+    {# Команда #}
     <section class="section section--with-paddings section--lb-bg ">
       <div class="container">
         <div class="section__content">
@@ -537,7 +538,7 @@
       </div>
     </section>
     {% set sectionCardSwiperCnt = sectionCardSwiperCnt + 1 %}
-
+    {# Сертификаты #}
     <section class="section section--with-paddings section--lb-bg ">
       <div class="container">
         <div class="section__content">
@@ -667,7 +668,7 @@
       </div>
     </section>
     {% set sectionCardSwiperCnt = sectionCardSwiperCnt + 1 %}
-
+    {# Вендоры #}
     <section class="vendors section section--with-paddings section--lb-bg ">
       <div class="container">
         <div class="section__content">
