--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -78,3 +78,5 @@
 @import "./blocks/person-card.scss";
 @import "./blocks/cert-card.scss";
 @import "./blocks/service-header.scss";
+@import "./blocks/other-service-card.scss";
+@import "./blocks/other-services-swiper.scss";
