--- a/src/views/pages/service-template.j2
+++ b/src/views/pages/service-template.j2
@@ -619,7 +619,9 @@
     </section>
 
     {% include "./blocks/cert-swiper.j2" %}
+    {% set sectionCardSwiperCnt = sectionCardSwiperCnt + 1 %}
     {% include "./blocks/download-cp.j2" %}
+    {% include "./blocks/other-services.j2" %}
 
   </main>
 {% endblock content %}
